FIX_SONAR-notification